syntax = "proto3";

package myproto;

// 定义两个服务
service HelloServer {
    // 第一个接口：打招呼的服务
    rpc SayHello(HelloReq) returns(HelloRes) {}

    // 第二个接口：说名字的服务
    rpc SayName(NameReq) returns(NameRes) {}
}

// 客户端发送给服务端
message HelloReq {
    string name = 1;
}

// 服务端返回给客户端
message HelloRes {
    string msg = 1;
}

// 客户端发送给服务端
message NameReq {
    string name = 1;
}

// 服务端返回给客户端
message NameRes {
    string msg = 1;
}